--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,8 @@ crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = "0.2.89"
+
+[dependencies.web-sys]
+version = "0.3.4"
+features = ["console"]
+
